// Vitest Snapshot v1

exports[`Compilation > basic > should compile sync 1`] = `
{
  "description": "test-desc",
  "name": "test-name",
  "version": "1.0.0",
}
`;

exports[`Compilation > plugins > should be chaining plugins 1`] = `
{
  "bugs": {
    "email": "test@test.de",
  },
  "description": "changed by test plugin 2",
  "name": "test-name",
  "version": "1.0.0",
}
`;

exports[`Compilation > plugins > should deep merge with the plugin result 1`] = `
{
  "description": "test-desc",
  "name": "test-name",
  "version": "1.1.2",
}
`;
